# licode

./: .gitignore  README.md  package-lock.json
doc/johnny/: README.md
erizo/src/: CMakeLists.txt
erizo/src/erizo/: NicerConnection.cpp  SdpInfo.cpp
erizo/src/erizo/media/: ExternalInput.cpp  ExternalOutput.cpp  MediaProcessor.cpp
erizo/src/erizo/pipeline/: HandlerContext-inl.h
erizo/src/erizo/rtp/: RtcpFeedbackGenerationHandler.cpp
erizo/src/examples/: CMakeLists.txt  Test.cpp  Test.h  hsam.cpp
erizo/src/examples/pc/: Observer.cpp  Observer.h  PCSocket.cpp  PCSocket.h  SDPReceiver.h
erizo/src/test/: WebRtcConnectionTest.cpp
erizo/src/test/bandwidth/: MaxVideoBWDistributor.cpp  TargetVideoBWDistributor.cpp
erizoAPI/: MediaStream.cc  WebRtcConnection.cc  binding.gyp  build.sh  package-lock.json  package.json
erizo_controller/: initErizo_agent.sh  initErizo_controller.sh  installErizo_controller.sh  package-lock.json
erizo_controller/erizoAgent/: erizoAgent.js
erizo_controller/erizoController/: erizoController.js
extras/basic_example/: basicServer.js
extras/basic_example/public/: script.js
extras/client/: basicServer.js  package-lock.json  package.json
extras/client/public/: erizo.js  erizo.js.map  index.html
extras/docker/: initDockerLicode.sh
nuve/: initNuve.sh  installNuve.sh  package-lock.json
nuve/nuveAPI/: nuve.js
scripts/: checkNvm.sh  initBasicExample.sh  installBasicExample.sh  installErizo.sh  installMacDeps.sh
spine/: installSpine.sh  package-lock.json  spineClientsConfig.json
test/: runSpineTest.sh
(+5 files in other folders)
